tests/paczka1/fuzzy1/89040135.err
Error in line 3: ftEOq6 SA02 52,6
Error in line 6: bsWyly3ZY S302 15,7
Error in line 8: ftEOq6 A312 17,4
Error in line 21: iUFrRcmj S212 31,7
Error in line 27: ftEOq6 A312 89,8
